--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,48 @@
   </head>
   <body class="font-Rubik">
     <!--Header-->
-	<nav class="container flex items-center py-4 mt-4 sm:mt-12">
-    <div class="py-1"><img src="./images/logo-bookmark.svg" alt="Bookmark" srcset="">
-    <ul class="hidden sm:flex flex-1 justify-end items-center gap-12 text-primaryBlue uppercase">
+    <header>
+      <nav class="container flex items-center py-4 mt-4 sm:mt-12">
+        <div class="py-1">
+          <img src="./images/logo-bookmark.svg" alt="Bookmark" srcset="" />
+        </div>
+        <ul
+          class="hidden sm:flex flex-1 justify-end items-center gap-12 text-primaryBlue uppercase text-xs"
+        >
+          <li class="cursor-pointer">Features</li>
+          <li class="cursor-pointer">Pricing</li>
+          <li class="cursor-pointer">Contact</li>
+          <button
+            type="button"
+            class="bg-primaryRed uppercase text-white rounded-md px-7 py-3 shadow-md"
+          >
+            Login
+          </button>
+        </ul>
+        <div class="flex sm:hidden flex-1 justify-end">
+          <img src="/public/images/icon-hamburger.svg" alt="menu" srcset="" />
+        </div>
+      </nav>
+    </header>
 
-    </ul>
-    </div>
-  </nav>
-
+    <!--Hero-->
+    <section class="realtive">
+      <div
+        class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28"
+      >
+        <div class="flex flex1 flex-col item-center lg:items-start">
+          <h2 class="text-primaryBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6">
+            A Simple Bookmark Manager
+          </h2>
+          <p class="text-neutralGrayishBlue text-center lg:text-left mb-6">
+            Tincidunt id aliquet risus feugiat in ante. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim. Nec sagittis aliquam malesuada bibendum arcu vitae. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Nulla pharetra diam sit amet nisl suscipit. 
+          </p>
+          <div class="flex justy-center flex-wrap gap-6">
+            <button type="button" class="btn btn-blue hover:bg-neutralGrayishBlue">Get in on Chrome</button>
+            <button type="button" class="btn btn-darkblue hover:bg-neutralVeryDarkBlue">Get it on Firefox</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
