--- a/public/index.html
+++ b/public/index.html
@@ -39,22 +39,45 @@
     </header>
 
     <!--Hero-->
-    <section class="realtive">
-      <div
-        class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28"
-      >
+    <section class="relative">
+      <div class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28">
+        <!-- Content -->
         <div class="flex flex1 flex-col item-center lg:items-start">
-          <h2 class="text-primaryBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6">
+          <h2
+            class="text-primaryBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6"
+          >
             A Simple Bookmark Manager
           </h2>
           <p class="text-neutralGrayishBlue text-center lg:text-left mb-6">
-            Tincidunt id aliquet risus feugiat in ante. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim. Nec sagittis aliquam malesuada bibendum arcu vitae. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Nulla pharetra diam sit amet nisl suscipit. 
+            Tincidunt id aliquet risus feugiat in ante. Vel fringilla est
+            ullamcorper eget nulla facilisi etiam dignissim. Nec sagittis
+            aliquam malesuada bibendum arcu vitae. Feugiat pretium nibh ipsum
+            consequat nisl vel pretium lectus quam. Nulla pharetra diam sit amet
+            nisl suscipit.
           </p>
           <div class="flex justy-center flex-wrap gap-6">
-            <button type="button" class="btn btn-blue hover:bg-neutralGrayishBlue">Get in on Chrome</button>
-            <button type="button" class="btn btn-darkblue hover:bg-neutralVeryDarkBlue">Get it on Firefox</button>
+            <button
+              type="button"
+              class="btn btn-blue hover:bg-neutralGrayishBlue"
+            >
+              Get in on Chrome
+            </button>
+            <button
+              type="button"
+              class="btn btn-darkblue hover:bg-neutralVeryDarkBlue"
+            >
+              Get it on Firefox
+            </button>
           </div>
         </div>
+        <!-- Image -->
+        <div class="flex justify-center flex-1 mb-10 md:mb-16 lg:mb-0 z-10">
+          <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="images/illustration-hero.svg" alt="">
+        </div>
+      </div>
+      <!-- Rounded Rectangle -->
+      <div class="hidden md:block overflow-hidden bg-primaryBlue rounded-l-full h-80 w-2/4 top-32 right-0">
+
       </div>
     </section>
   </body>
