--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,11 @@
 
     <!--Hero-->
     <section class="relative">
-      <div class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28">
+      <div
+        class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28"
+      >
         <!-- Content -->
-        <div class="flex flex1 flex-col item-center lg:items-start">
+        <div class="flex flex-1 flex-col item-center lg:items-start">
           <h2
             class="text-primaryBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6"
           >
@@ -71,14 +73,21 @@
           </div>
         </div>
         <!-- Image -->
+
         <div class="flex justify-center flex-1 mb-10 md:mb-16 lg:mb-0 z-10">
-          <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="images/illustration-hero.svg" alt="">
+          <img
+            class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
+            src="/public/images/illustration-hero.svg"
+            alt=""
+          />
         </div>
       </div>
       <!-- Rounded Rectangle -->
-      <div class="hidden md:block overflow-hidden bg-primaryBlue rounded-l-full h-80 w-2/4 top-32 right-0">
-
-      </div>
+      <div
+        class="hidden md:block overflow-hidden bg-primaryBlue rounded-l-full absolute h-80 w-2/4 top-32 right-0 lg:-bottom-28 lg:-right-36"
+      ></div>
     </section>
+
+    
   </body>
 </html>
