--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
         <ul
           class="hidden sm:flex flex-1 justify-end items-center gap-12 text-primaryBlue uppercase text-xs"
         >
-          <li class="cursor-pointer">Features</li>
-          <li class="cursor-pointer">Pricing</li>
-          <li class="cursor-pointer">Contact</li>
+          <li class="cursor-pointer text-neutralVeryDarkBlue">Features</li>
+          <li class="cursor-pointer text-neutralVeryDarkBlue">Pricing</li>
+          <li class="cursor-pointer text-neutralVeryDarkBlue">Contact</li>
           <button
             type="button"
             class="bg-primaryRed uppercase text-white rounded-md px-7 py-3 shadow-md"
@@ -46,16 +46,14 @@
         <!-- Content -->
         <div class="flex flex-1 flex-col item-center lg:items-start">
           <h2
-            class="text-primaryBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6"
+            class="text-neutralVeryDarkBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6"
           >
             A Simple Bookmark Manager
           </h2>
           <p class="text-neutralGrayishBlue text-center lg:text-left mb-6">
             Tincidunt id aliquet risus feugiat in ante. Vel fringilla est
             ullamcorper eget nulla facilisi etiam dignissim. Nec sagittis
-            aliquam malesuada bibendum arcu vitae. Feugiat pretium nibh ipsum
-            consequat nisl vel pretium lectus quam. Nulla pharetra diam sit amet
-            nisl suscipit.
+            aliquam malesuada bibendum arcu vitae.
           </p>
           <div class="flex justy-center flex-wrap gap-6">
             <button
@@ -66,7 +64,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-darkblue hover:bg-neutralVeryDarkBlue"
+              class="btn btn-darkblue hover:bg-neutralVeryDarkBlue hover:text-white"
             >
               Get it on Firefox
             </button>
@@ -84,10 +82,279 @@
       </div>
       <!-- Rounded Rectangle -->
       <div
-        class="hidden md:block overflow-hidden bg-primaryBlue rounded-l-full absolute h-80 w-2/4 top-32 right-0 lg:-bottom-28 lg:-right-36"
+        class="hidden md:block bg-primaryBlue rounded-l-full absolute h-80 w-2/4 top-32 right-0 lg:-bottom-28 lg:-right-36 overflow-hidden"
       ></div>
     </section>
 
-    
+    <!-- Features -->
+    <section class="py-20 mt-20 md:mt-60">
+      <!-- Heading -->
+      <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+        <h1 class="text-3xl text-center text-neutralVeryDarkBlue">Features</h1>
+        <p class="text-center text-neutralGrayishBlue mt-4">
+          Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
+          Nulla pharetra diam sit amet nisl suscipit.
+        </p>
+      </div>
+
+      <!-- Feature Tabs -->
+      <div
+        class="flex justify-center text-sm font-bold text-center mt-16 text-gray-500 border-gray-20"
+      >
+        <ul class="flex flex-wrap -mb-px">
+          <li class="flex flex-1/3">
+            <a
+              href="#"
+              class="w-52 inline-block p-4 border-b-2 border-spacing-64 hover:text-gray-600 hover:border-gray-300"
+              >Profile</a
+            >
+          </li>
+          <li class="flex flex-1/3">
+            <a
+              href="#"
+              class="w-52 inline-block p-4 text-neutralVeryDarkBlue border-b-4 border-primaryRed active"
+              aria-current="page"
+              >Dashboard</a
+            >
+          </li>
+          <li class="flex flex-1/3">
+            <a
+              href="#"
+              class="w-52 inline-block p-4 border-b-2 hover:text-gray-600 hover:border-gray-300"
+              >Settings</a
+            >
+          </li>
+        </ul>
+      </div>
+      <!-- Feature #1 -->
+      <div class="relative mt-14 lg:mt-16">
+        <div
+          class="container flex flex-col lg:flex-row items-center justify-center gap-x-24"
+        >
+          <!-- Image -->
+          <div class="flex flex-1 justify-center mb-10 md:mb-16 lg:mb-0 z-10">
+            <img
+              src="/public/images/illustration-features-tab-1.svg"
+              class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
+              alt="feature 1"
+              srcset=""
+            />
+          </div>
+          <!-- Content -->
+          <div class="flex flex-1 flex-col items-center lg:items-start">
+            <h1 class="text-3xl text-neutralVeryDarkBlue">
+              Bookmark in one click
+            </h1>
+            <p
+              class="text-neutralGrayishBlue my-4 text-center lg:text-left sm:w-3/4 lg:w-full"
+            >
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Gravida arcu ac tortor dignissim convallis aenean et tortor at.
+              Elit eget gravida cum sociis natoque penatibus et magnis dis.
+            </p>
+            <button
+              type="button"
+              class="btn btn-blue hover:bg-neutralGrayishBlue"
+            >
+              More Info
+            </button>
+          </div>
+        </div>
+        <div
+          class="hidden lg:block overflow-hidden bg-primaryBlue rounded-r-full absolute h-80 w-2/4 top-32 lg:-bottom-28 lg:-left-36"
+        ></div>
+      </div>
+    </section>
+
+    <!-- Downloads -->
+    <section class="py-20 mt-20 md:mt-60">
+      <!-- Heading -->
+      <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+        <h1 class="text-3xl text-center text-neutralVeryDarkBlue">
+          Download the extension
+        </h1>
+        <p class="text-center text-neutralGrayishBlue mt-4">
+          Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
+          Nulla pharetra diam sit amet nisl suscipit.
+        </p>
+      </div>
+      <!-- Cards -->
+      <div
+        class="container grid gap-16 grid-cols-1 md:grid-cols-3 grid-rows-1 max-screen-lg mt-16"
+      >
+        <!-- Card #1-->
+        <div class="flex flex-col rounded-md shadow-md md:mb-16">
+          <div class="p-6 flex flex-col items-center">
+            <img
+              src="/public/images/logo-chrome.svg"
+              alt="Google Chrome"
+              srcset=""
+            />
+            <h3 class="mt-5 mb-2 text-neutralVeryDarkBlue text-lg">
+              Add to Chrome
+            </h3>
+            <p class="mb-2 text-neutralGrayishBlue font-light">
+              Minimum version 62
+            </p>
+          </div>
+          <hr class="border-b border-gray-100" />
+          <div class="flex p-6">
+            <button
+              type="button"
+              class="btn btn-blue flex-1 hover:bg-neutralGrayishBlue"
+            >
+              Add & Install Extendion
+            </button>
+          </div>
+        </div>
+
+        <!-- Card #2-->
+        <div class="flex flex-col rounded-md shadow-md md:my-8">
+          <div class="p-6 flex flex-col items-center">
+            <img
+              src="/public/images/logo-firefox.svg"
+              alt="Google Chrome"
+              srcset=""
+            />
+            <h3 class="mt-5 mb-2 text-neutralVeryDarkBlue text-lg">
+              Add to Firefox
+            </h3>
+            <p class="mb-2 text-neutralGrayishBlue font-light">
+              Minimum version 55
+            </p>
+          </div>
+          <hr class="border-b border-gray-100" />
+          <div class="flex p-6">
+            <button
+              type="button"
+              class="btn btn-blue flex-1 hover:bg-neutralGrayishBlue"
+            >
+              Add & Install Extendion
+            </button>
+          </div>
+        </div>
+
+        <!-- Card #3-->
+        <div class="flex flex-col rounded-md shadow-md md:mt-16">
+          <div class="p-6 flex flex-col items-center">
+            <img
+              src="/public/images/logo-opera.svg"
+              alt="Google Chrome"
+              srcset=""
+            />
+            <h3 class="mt-5 mb-2 text-neutralVeryDarkBlue text-lg">
+              Add to Opera
+            </h3>
+            <p class="mb-2 text-neutralGrayishBlue font-light">
+              Minimum version 46
+            </p>
+          </div>
+          <hr class="border-b border-gray-100" />
+          <div class="flex p-6">
+            <button
+              type="button"
+              class="btn btn-blue flex-1 hover:bg-neutralGrayishBlue"
+            >
+              Add & Install Extendion
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="bg-gray-100 py-20">
+      <div class="container">
+        <!-- Heading -->
+        <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+          <h1 class="text-3xl text-center text-neutralVeryDarkBlue">
+            Frequently Asked Questions
+          </h1>
+          <p class="text-center text-neutralGrayishBlue mt-4">
+            Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
+            Nulla pharetra diam sit amet nisl suscipit.
+          </p>
+        </div>
+        <!-- FAQ Items -->
+        <div class="flex flex-col sm:w-3/4 md:w-5/12 mt-12 mx-auto">
+          <div class="flex items-center border-b py-4">
+            <span class="flex-1">What is a Bookmark?</span>
+            <img src="images/icon-arrow.svg" alt="" srcset="" />
+          </div>
+          <div class="flex items-center border-b py-4">
+            <span class="flex-1">How can I request a new browser?</span>
+            <img src="images/icon-arrow.svg" alt="" srcset="" />
+          </div>
+          <div class="flex items-center border-b py-4">
+            <span class="flex-1">Is there a mobile app?</span>
+            <img src="images/icon-arrow.svg" alt="" srcset="" />
+          </div>
+          <div class="flex items-center border-b py-4">
+            <span class="flex-1">What about other Chromium browsers?</span>
+            <img src="images/icon-arrow.svg" alt="" srcset="" />
+          </div>
+          <button
+            type="button"
+            class="flex self-center mt-12 btn btn-blue hover:bg-neutralGrayishBlue"
+          >
+            More info
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact us -->
+    <section class="bg-primaryBlue text-white py-20">
+      <div class="container">
+        <div class="sm:w-3/4 lg:w-2/4 mx-auto">
+          <p class="font-light uppercase text-center mb-8">
+            35,000+ ALREADY JOINED
+          </p>
+          <h1 class="text-3xl text-center">
+            Stay up-to-date with what we're doing
+          </h1>
+          <div class="flex flex-col sm:flex-row gap-6 mt-8">
+            <input
+              type="email"
+              placeholder="Enter your email address"
+              class="focus:outline-none flex-1 px-2 py-3 rounded-md text-black"
+            />
+            <button
+              type="button"
+              class="btn bg-primaryRed hover:bg-neutralGrayishBlue"
+            >
+              Get in on Chrome
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-neutralVeryDarkBlue py-8">
+      <div class="container flex flex-col md:flex-row items-center">
+        <div
+          class="flex flex-1 flex-wrap items-center justify-center md:justify-start gap-12"
+        >
+          <img
+            src="/public/images/logo-bookmark.svg"
+            alt="Bookmark"
+            srcset=""
+          />
+          <ul class="flex text-white uppercase gap-12 text-sm">
+            <li class="cursor-pointer">Features</li>
+            <li class="cursor-pointer">Pricing</li>
+            <li class="cursor-pointer">Contact</li>
+          </ul>
+        </div>
+        <div class="flex gap-10 mt-12 md:mt-8">
+          <ul class="flex flex-row gap-10">
+            <li><img src="/public/images/icon-twitter.svg" alt="" /></li>
+            <li><img src="/public/images/icon-facebook.svg" alt="" /></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
