--- a/public/index.html
+++ b/public/index.html
@@ -53,12 +53,12 @@
     <!--Hero-->
     <section class="relative">
       <div
-        class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-14 lg:mt-28"
+        class="container flex flex-col-reverse 2xl:flex-row items-center gap-12 mt-14 2xl:mt-28"
       >
         <!-- Content -->
-        <div class="flex flex-1 flex-col item-center lg:items-start">
+        <div class="flex flex-1 flex-col items-center 2xl:items-start">
           <h2
-            class="text-neutralVeryDarkBlue text-3xl md:text-4 lg:text-5xl text-center lg:text-left mb-6"
+            class="text-neutralVeryDarkBlue text-3xl xs:text-4 2xl:text-5xl text-center 2xl:text-left mb-6"
           >
             A Simple Bookmark Manager
           </h2>
@@ -67,7 +67,7 @@
             ullamcorper eget nulla facilisi etiam dignissim. Nec sagittis
             aliquam malesuada bibendum arcu vitae.
           </p>
-          <div class="flex justy-center flex-wrap gap-6">
+          <div class="flex justify-center flex-wrap gap-6">
             <button type="button" class="btn btn-blue btn-hoverBlue">
               Get in on Chrome
             </button>
@@ -91,57 +91,61 @@
       </div>
       <!-- Rounded Rectangle -->
       <div
-        class="hidden md:block bg-primaryBlue rounded-l-full absolute h-80 w-2/4 top-32 right-0 lg:-bottom-28 lg:-right-36 overflow-hidden"
+        class="hidden sm:block bg-primaryBlue rounded-l-full absolute h-40 2xl:h-80 w-2/4 top-16 2xl:top-32 right-0 2xl:-bottom-28 2xl:-right-36 overflow-hidden"
       ></div>
     </section>
 
     <!-- Features -->
-    <section class="py-20 mt-20 md:mt-60">
+    <section class="py-20 mt-20 2xl:mt-60">
       <!-- Heading -->
-      <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
-        <h1 class="text-3xl text-center text-neutralVeryDarkBlue">Features</h1>
-        <p class="text-center text-neutralGrayishBlue mt-4">
-          Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
-          Nulla pharetra diam sit amet nisl suscipit.
-        </p>
-      </div>
+      <div class="container">
+        <div class="xs:w-3/4 2xl:w-5/12 mx-auto px-2">
+          <h1 class="text-3xl text-center text-neutralVeryDarkBlue">
+            Features
+          </h1>
+          <p class="text-center text-neutralGrayishBlue mt-4">
+            Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
+            Nulla pharetra diam sit amet nisl suscipit.
+          </p>
+        </div>
 
-      <!-- Feature Tabs -->
-      <div
-        class="flex justify-center text-sm font-bold text-center mt-16 text-gray-500 border-gray-20"
-      >
-        <ul class="flex flex-wrap -mb-px">
-          <li class="flex flex-1/3">
-            <a
-              href="#"
-              class="w-52 inline-block p-4 border-b-2 border-spacing-64 hover:border-gray-300 hover:text-primaryRed"
-              >Profile</a
-            >
-          </li>
-          <li class="flex flex-1/3">
-            <a
-              href="#"
-              class="w-52 inline-block p-4 text-neutralVeryDarkBlue border-b-4 border-primaryRed active"
-              aria-current="page"
-              >Dashboard</a
-            >
-          </li>
-          <li class="flex flex-1/3">
-            <a
-              href="#"
-              class="w-52 inline-block p-4 border-b-2 hover:text-primaryRed hover:border-gray-300"
-              >Settings</a
-            >
-          </li>
-        </ul>
+        <!-- Feature Tabs -->
+        <div
+          class="flex justify-center text-sm font-bold text-center mt-16 text-gray-500 border-gray-20"
+        >
+          <ul class="flex flex-wrap justify-center -mb-px">
+            <li class="flex 2xl:flex-1/3">
+              <a
+                href="#"
+                class="w-72 inline-block p-4 border-b-2 hover:border-gray-300 hover:text-primaryRed"
+                >Profile</a
+              >
+            </li>
+            <li class="flex 2xl:flex-1/3">
+              <a
+                href="#"
+                class="w-72 p-4 text-neutralVeryDarkBlue border-b-4 border-primaryRed active"
+                aria-current="page"
+                >Dashboard</a
+              >
+            </li>
+            <li class="flex 2xl:flex-1/3">
+              <a
+                href="#"
+                class="w-72 inline-block p-4 border-b-2 hover:text-primaryRed hover:border-gray-300"
+                >Settings</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
       <!-- Feature #1 -->
       <div class="relative mt-14 lg:mt-16">
         <div
-          class="container flex flex-col lg:flex-row items-center justify-center gap-x-24"
+          class="container flex flex-col 2xl:flex-row items-center justify-center gap-x-24"
         >
           <!-- Image -->
-          <div class="flex flex-1 justify-center mb-10 md:mb-16 lg:mb-0 z-10">
+          <div class="flex flex-1 justify-center mb-10 xs:mb-16 2xl:mb-0 z-10">
             <img
               src="/public/images/illustration-features-tab-1.svg"
               class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
@@ -150,12 +154,12 @@
             />
           </div>
           <!-- Content -->
-          <div class="flex flex-1 flex-col items-center lg:items-start">
+          <div class="flex flex-1 flex-col items-center 2xl:items-start mt-12">
             <h1 class="text-3xl text-neutralVeryDarkBlue">
               Bookmark in one click
             </h1>
             <p
-              class="text-neutralGrayishBlue my-4 text-center lg:text-left sm:w-3/4 lg:w-full"
+              class="text-neutralGrayishBlue my-4 text-center 2xl:text-left xs:w-3/4 2xl:w-full"
             >
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -168,29 +172,30 @@
           </div>
         </div>
         <div
-          class="hidden lg:block overflow-hidden bg-primaryBlue rounded-r-full absolute h-80 w-2/4 top-32 lg:-bottom-28 lg:-left-36"
+          class="hidden sm:block bg-primaryBlue rounded-r-full absolute h-40 2xl:h-80 w-2/4 overflow-hidden top-20 2xl:-bottom-28 2xl:-left-36"
         ></div>
       </div>
     </section>
 
     <!-- Downloads -->
-    <section class="py-20 mt-20 md:mt-60">
+    <section class="container py-20 mt-20 2xl:mt-60">
       <!-- Heading -->
-      <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+      <div class="xs:w-3/4 2xl:w-5/12 mx-auto px-2">
         <h1 class="text-3xl text-center text-neutralVeryDarkBlue">
           Download the extension
         </h1>
         <p class="text-center text-neutralGrayishBlue mt-4">
           Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
-          Nulla pharetra diam sit amet nisl suscipit.
+          Nulla pharetra diam sit amet nisl suscipit Feugiat pretium nibh ipsum
+          consequat nisl vel pretium lectus quam.
         </p>
       </div>
       <!-- Cards -->
       <div
-        class="container grid gap-16 grid-cols-1 md:grid-cols-3 grid-rows-1 max-screen-lg mt-16"
+        class="container grid gap-16 grid-cols-1 2xl:grid-cols-3 2xl:w-8/12 grid-rows-1 max-screen-lg mt-16"
       >
         <!-- Card #1-->
-        <div class="flex flex-col rounded-md shadow-md md:mb-16">
+        <div class="flex flex-col rounded-md shadow-md 2xl:mb-16">
           <div class="p-6 flex flex-col items-center">
             <img
               src="/public/images/logo-chrome.svg"
@@ -213,7 +218,7 @@
         </div>
 
         <!-- Card #2-->
-        <div class="flex flex-col rounded-md shadow-md md:my-8">
+        <div class="flex flex-col rounded-md shadow-md 2xl:my-8">
           <div class="p-6 flex flex-col items-center">
             <img
               src="/public/images/logo-firefox.svg"
@@ -236,7 +241,7 @@
         </div>
 
         <!-- Card #3-->
-        <div class="flex flex-col rounded-md shadow-md md:mt-16">
+        <div class="flex flex-col rounded-md shadow-md 2xl:mt-16">
           <div class="p-6 flex flex-col items-center">
             <img
               src="/public/images/logo-opera.svg"
@@ -261,77 +266,96 @@
     </section>
 
     <!-- FAQ -->
-    <section class="py-20">
-      <div class="container">
-        <!-- Heading -->
-        <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
-          <h1 class="text-3xl text-center text-neutralVeryDarkBlue">
-            Frequently Asked Questions
-          </h1>
-          <p class="text-center text-neutralGrayishBlue mt-4">
-            Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
-            Nulla pharetra diam sit amet nisl suscipit.
-          </p>
-        </div>
-        <!-- FAQ Items -->
-        <div class="flex flex-col sm:w-3/4 md:w-5/12 mt-12 mx-auto">
-          <div class="flex items-center border-b py-4">
-            <span class="flex-1 hover:text-primaryRed"
-              >What is a Bookmark?</span
-            >
-            <img src="images/icon-arrow.svg" alt="" srcset="" />
-          </div>
-          <div class="border-b py-4">
-            <div class="flex flex-row items-center">
-              <span class="flex-1 hover:text-primaryRed"
-                >How can I request a new browser?</span
-              >
-              <img src="images/icon-arrow.svg" class="rotate180 svg-red" alt="" srcset="" />
-            </div>
+    <section class="container py-20">
+      <!-- Heading -->
+      <div class="xs:w-3/4 2xl:w-5/12 mx-auto px-2">
+        <h1 class="text-3xl text-center text-neutralVeryDarkBlue">
+          Frequently Asked Questions
+        </h1>
+        <p class="text-center text-neutralGrayishBlue mt-4">
+          Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
+          Nulla pharetra diam sit amet nisl suscipit.
+        </p>
+      </div>
 
-            <div class="flex flex-row flex-1 mt-12">
-              <p class="text-neutralGrayishBlue font-light">
-                Feugiat pretium nibh ipsum consequat nisl vel pretium lectus
-                quam. Nulla pharetra diam sit amet nisl suscipit.Feugiat pretium
-                nibh ipsum consequat nisl vel pretium lectus quam. Nulla
-                pharetra diam sit amet nisl suscipit.
-              </p>
-            </div>
-          </div>
-
-          <div class="flex items-center border-b py-4">
-            <span class="flex-1 hover:text-primaryRed"
-              >Is there a mobile app?</span
-            >
-            <img src="images/icon-arrow.svg" alt="" srcset="" />
-          </div>
-          <div class="flex items-center border-b py-4">
-            <span class="flex-1 hover:text-primaryRed"
-              >What about other Chromium browsers?</span
-            >
-            <img src="images/icon-arrow.svg" alt="" srcset="" />
-          </div>
-          <button
-            type="button"
-            class="flex self-center mt-12 btn btn-blue btn-hoverBlue"
+      <!-- FAQ Items -->
+      <div class="flex flex-col xs:w-3/4 2xl:w-5/12 mt-12 mx-auto">
+        <div class="flex items-center border-b py-4">
+          <span class="flex-1 hover:text-primaryRed cursor-pointer"
+            >What is a Bookmark?</span
           >
-            More info
-          </button>
+          <img
+            src="images/icon-arrow.svg"
+            class="cursor-pointer"
+            alt=""
+            srcset=""
+          />
         </div>
+        <div class="border-b py-4">
+          <div class="flex flex-row items-center">
+            <span class="flex-1 hover:text-primaryRed cursor-pointer"
+              >How can I request a new browser?</span
+            >
+            <img
+              src="images/icon-arrow.svg"
+              class="rotate180 svg-red cursor-pointer"
+              alt=""
+              srcset=""
+            />
+          </div>
+
+          <div class="flex flex-row flex-1 mt-12">
+            <p class="text-neutralGrayishBlue font-light">
+              Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam.
+              Nulla pharetra diam sit amet nisl suscipit.Feugiat pretium nibh
+              ipsum consequat nisl vel pretium lectus quam. Nulla pharetra diam
+              sit amet nisl suscipit.
+            </p>
+          </div>
+        </div>
+
+        <div class="flex items-center border-b py-4">
+          <span class="flex-1 hover:text-primaryRed cursor-pointer"
+            >Is there a mobile app?</span
+          >
+          <img
+            src="images/icon-arrow.svg"
+            class="cursor-pointer"
+            alt=""
+            srcset=""
+          />
+        </div>
+        <div class="flex items-center border-b py-4">
+          <span class="flex-1 hover:text-primaryRed cursor-pointer"
+            >What about other Chromium browsers?</span
+          >
+          <img
+            src="images/icon-arrow.svg"
+            class="cursor-pointer"
+            alt=""
+            srcset=""
+          />
+        </div>
+        <button
+          type="button"
+          class="flex self-center mt-12 btn btn-blue btn-hoverBlue"
+        >
+          More info
+        </button>
       </div>
     </section>
 
     <!-- Contact us -->
     <section class="bg-primaryBlue text-white py-20">
       <div class="container">
-        <div class="sm:w-3/4 lg:w-2/4 mx-auto">
+        <div class="xs:w-3/4 2xl:w-2/4 mx-auto">
           <p class="font-light uppercase text-center mb-8">
             35,000+ ALREADY JOINED
           </p>
           <h1 class="text-3xl text-center">
             Stay up-to-date with what we're doing
           </h1>
-          <div class="flex flex-col sm:flex-row gap-6 mt-8">
+          <div class="flex flex-col xs:flex-row gap-6 mt-8">
             <input
               type="email"
               placeholder="Enter your email address"
@@ -350,22 +374,27 @@
 
     <!-- Footer -->
     <footer class="bg-neutralVeryDarkBlue py-8">
-      <div class="container flex flex-col md:flex-row items-center">
-        <div
-          class="flex flex-1 flex-wrap items-center justify-center md:justify-start gap-12"
-        >
+      <div class="container flex flex-col 2xl:flex-row items-center">
+        <div class="flex items-center justify-center 2xl:justify-start">
           <img
             src="/public/images/logo-bookmark.svg"
             alt="Bookmark"
             srcset=""
           />
-          <ul class="flex text-white uppercase gap-12 text-sm">
+        </div>
+        <div
+          class="flex flex-1 items-start justify-center 2xl:justify-start gap-12 mt-12 2xl:mt-0"
+        >
+          <ul
+            class="flex flex-col 2xl:flex-row text-white uppercase gap-12 text-sm"
+          >
             <li class="cursor-pointer hover:text-primaryRed">Features</li>
             <li class="cursor-pointer hover:text-primaryRed">Pricing</li>
             <li class="cursor-pointer hover:text-primaryRed">Contact</li>
           </ul>
         </div>
-        <ul class="flex flex-row gap-10">
+
+        <ul class="flex flex-row gap-10 mt-10 2xl:mt-0">
           <li class="cursor-pointer">
             <img
               class="colorize-red"
