adapt to mobile and desktop

--- a/public/index.html
+++ b/public/index.html
@@ -386,7 +386,7 @@
           class="flex flex-1 items-start justify-center 2xl:justify-start gap-12 mt-12 2xl:mt-0"
         >
           <ul
-            class="flex flex-col 2xl:flex-row text-white uppercase gap-12 text-sm"
+            class="flex flex-col 2xl:flex-row items-center text-white uppercase gap-12 text-sm"
           >
             <li class="cursor-pointer hover:text-primaryRed">Features</li>
             <li class="cursor-pointer hover:text-primaryRed">Pricing</li>
