--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
       </div>
       <!-- Rounded Rectangle -->
       <div
-        class="hidden sm:block bg-primaryBlue rounded-l-full absolute h-40 2xl:h-80 w-2/4 top-16 2xl:top-32 right-0 2xl:-bottom-28 2xl:-right-36 overflow-hidden"
+        class="hidden sm:block bg-primaryBlue rounded-l-full absolute h-40 2xl:h-80 w-2/4 top-16 2xl:top-40 right-0 2xl:-bottom-28 2xl:-right-36 overflow-hidden"
       ></div>
     </section>
 
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div
-          class="hidden sm:block bg-primaryBlue rounded-r-full absolute h-40 2xl:h-80 w-2/4 overflow-hidden top-20 2xl:-bottom-28 2xl:-left-36"
+          class="hidden sm:block bg-primaryBlue rounded-r-full absolute h-40 2xl:h-80 w-2/4 overflow-hidden top-20 2xl:top-40 2xl:-bottom-28 2xl:-left-36"
         ></div>
       </div>
     </section>
@@ -355,7 +355,7 @@
           <h1 class="text-3xl text-center">
             Stay up-to-date with what we're doing
           </h1>
-          <div class="flex flex-col xs:flex-row gap-6 mt-8">
+          <div class="flex flex-col 2xl:flex-row gap-6 mt-8">
             <input
               type="email"
               placeholder="Enter your email address"
@@ -363,9 +363,9 @@
             />
             <button
               type="button"
-              class="btn border-primaryRed bg-primaryRed btn-redhover"
+              class="btn border-primaryRed bg-primaryRed uppercase btn-redhover"
             >
-              Get in on Chrome
+              Contact us
             </button>
           </div>
         </div>
@@ -398,14 +398,14 @@
           <li class="cursor-pointer">
             <img
               class="colorize-red"
-              src="/public/images/icon-twitter.svg"
+              src="/public/images/icon-facebook.svg"
               alt=""
             />
           </li>
           <li class="cursor-pointer">
             <img
               class="colorize-red"
-              src="/public/images/icon-facebook.svg"
+              src="/public/images/icon-twitter.svg"
               alt=""
             />
           </li>
